--- a/Quanlinhahang/Views/Account/Info.cshtml
+++ b/Quanlinhahang/Views/Account/Info.cshtml
@@ -17,7 +17,7 @@
             <div class="form-group">
                 <label for="regUsername">Tên đăng nhập</label>
                 <div class="input-wrapper">
-                    <input type="text" id="regUsername" name="username" readonly />
+                    <input type="text" id="regUsername" name="username" required />
                 </div>
             </div>
 
