--- a/Quanlinhahang/Views/Account/Vouchers.cshtml
+++ b/Quanlinhahang/Views/Account/Vouchers.cshtml
@@ -5,7 +5,6 @@
 @section Styles {
     <link rel="stylesheet" href="~/css/history.css" asp-append-version="true" />
     <style>
-        /* Tùy chỉnh nhỏ cho trang Voucher */
         .voucher-header {
             background-color: #333;
             padding: 20px;
@@ -15,8 +14,9 @@
             color: #e8e8e8;
         }
         .voucher-card {
+            min-width: 500px;
             background: #2a2a2a;
-            border-left: 5px solid #c59d5f; /* Viền vàng kim */
+            border-left: 5px solid #c59d5f;
             display: flex;
             justify-content: space-between;
             align-items: center;
