--- a/Quanlinhahang/Views/Home/Menu.cshtml
+++ b/Quanlinhahang/Views/Home/Menu.cshtml
@@ -1,4 +1,5 @@
-﻿@model Quanlinhahang.Models.MenuViewModel
+﻿@using Quanlinhahang.Models.ViewModels
+@model MenuViewModel
 
 @{
     ViewBag.Title = "Thực đơn";
