--- a/Quanlinhahang/Views/Shared/_Navbar.cshtml
+++ b/Quanlinhahang/Views/Shared/_Navbar.cshtml
@@ -55,9 +55,9 @@
 
         <form id="loginForm">
             <div class="form-group">
-                <label for="username">Tài khoản</label>
+                <label for="username">Số điện thoại / Email</label>
                 <div class="input-wrapper">
-                    <input type="text" id="username" name="username" placeholder="Nhập tài khoản" required />
+                    <input type="text" id="username" name="username" placeholder="Nhập SĐT hoặc Email" required />
                 </div>
             </div>
 
